--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
                 <span class="badge badge-white badge-pill profile-designation">Full Stack Developer</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
@@ -93,6 +93,23 @@
                         </div>
                     </div>
                 </div>
+
+                <form action="mailto:archanasai1313@gmail.com" method="POST" class="contact-form" enctype="text/plain">
+                    <div class="form-group form-group-name">
+                      <label for="name" class="sr-only">Name</label>
+                      <input type="text" name="name" id="name" class="form-control" placeholder="NAME">
+                    </div>
+                    <div class="form-group form-group-email">
+                        <label for="email" class="sr-only">Email</label>
+                        <input type="email" name="email" id="email" class="form-control" placeholder="EMAIL">
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="sr-only">Message</label>
+                        <textarea name="message" id="message" class="form-control" placeholder="MESSAGE" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary form-submit-btn">SEND MESSAGE</button>
+                </form>
+
             </section>
             <section class="location-section">
                 <h5 class="section-title">MY LOCATION</h5>
