--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
                 <span class="badge badge-white badge-pill profile-designation">Full Stack Developer</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
