--- a/resume.html
+++ b/resume.html
@@ -33,8 +33,8 @@
                 <span class="badge badge-white badge-pill profile-designation">Full Stack Developer</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
@@ -82,26 +82,23 @@
                         <h2 class="section-title">EDUCATION</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1998 - 2005</span>
-                                <h6 class="time-line-item-title">Master In Computer Science</h6>
-                                <p class="time-line-item-subtitle">MASTER, UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.</p>
+                                <span class="badge badge-primary">2014 - 2018</span>
+                                <h6 class="time-line-item-title">B.E Electronics and Communication Engineering</h6>
+                                <p class="time-line-item-subtitle">Sethu Institute of Technology</p>
+                                <p class="time-line-item-content">CGPA : 9.1</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1995 - 1998</span>
-                                <h6 class="time-line-item-title">Studied at Harvard University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
+                                <span class="badge badge-primary">2013 - 2014</span>
+                                <h6 class="time-line-item-title">HSC - Bio Maths</h6>
+                                <p class="time-line-item-subtitle">St. Joseph matric. hr. sec. school</p>
+                                <p class="time-line-item-content">Percentage of Completion : 75
                                 </p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1993 - 1995</span>
-                                <h6 class="time-line-item-title">Studied at Oxford University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
+                                <span class="badge badge-primary">2011 - 2012</span>
+                                <h6 class="time-line-item-title">SSLC</h6>
+                                <p class="time-line-item-subtitle">St. Joseph matric. hr. sec. school</p>
+                                <p class="time-line-item-content">Percentage of Completion : 95
                                 </p>
                             </li>
                         </ul>
@@ -111,30 +108,23 @@
                         <h2 class="section-title">Experience</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2010 - 2014</span>
-                                <h6 class="time-line-item-title">UI/UX Designer</h6>
-                                <p class="time-line-item-subtitle">Web Agency</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.</p>
+                                <span class="badge badge-primary">2019 - 2020</span>
+                                <h6 class="time-line-item-title">Software Engineer</h6>
+                                <p class="time-line-item-subtitle">Solartis Technologies Pvt. Ltd</p>
+                                <p class="time-line-item-content">worked as Full stack developer in building 
+                                    Solartis Internal Product tool</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2008 - 2010</span>
-                                <h6 class="time-line-item-title">Web Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
+                                <span class="badge badge-primary">2018 - 2019</span>
+                                <h6 class="time-line-item-title">Associate Software Engineer</h6>
+                                <p class="time-line-item-subtitle">Solartis Technologies Pvt. Ltd</p>
+                                <p class="time-line-item-content">worked as Backend developer in Solartis Customer Project</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2006 - 2008</span>
-                                <h6 class="time-line-item-title">Graphic Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
+                                <span class="badge badge-primary">2018</span>
+                                <h6 class="time-line-item-title">Intern</h6>
+                                <p class="time-line-item-subtitle">Solartis Technologies Pvt. Ltd</p>
+                                <p class="time-line-item-content"></p>
                             </li>
                         </ul>
                     </div>
