--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             </div>
             <nav class="social-links">
                 <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/ArchanaSai" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="contact-card col-lg-4">
                             <h6 class="contact-card-title">LinkedIn</h6>
-                            <a class="contact-card-content" href="https://www.linkedin.com/in/archanasai-p">linkedin.com/in/archanasai-p</a>
+                            <a class="contact-card-content" target="_blank" href="https://www.linkedin.com/in/archanasai-p">linkedin.com/in/archanasai-p</a>
                         </div>
                     </div>
                 </div>
