added resource links

--- a/resource.html
+++ b/resource.html
@@ -28,6 +28,24 @@
             <div class="container">
                 <p>Here I have listed the resources that I have used in my web developer journey. Hope these help you in your journey.</p>
                 </p>
+                <div class="linkPanel text-left">
+                    <h1 >Free Templates</h1>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li><a href=http://www.mashup-template.com/templates.html" target="_blank">Mashup</a></li>
+                        <li><a href="https://www.creative-tim.com/templates/free" target="_blank">Creative Tim</a></li>
+                    </ul>
+
+                    <h1>Logo Makers</h1>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li><a href=https://www.squarespace.com/logo" target="_blank">Square Space</a></li>
+                        <li><a href="https://www.fiverr.com/logo-maker" target="_blank">Fiverr</a></li>
+                        <li><a href="https://hatchful.shopify.com/" target="_blank">Hatchful</a></li>
+                        <li><a href="https://www.namecheap.com/logo-maker/" target="_blank">Name Cheap</a></li>
+                    </ul>
+                    
+                </div>
             </div>
         </section>
         <footer>Made from Curiosity <i class='fas fa-dove'></i> </footer>
