updated files with minor style changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             </div>
             <nav class="social-links">
                 <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/ArchanaSai" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
@@ -81,6 +81,7 @@
                     <p class="text-capitalize">I have listed my personal projects and the customer projects I have worked with.
                     Have a Look...!</p>
                 </div>
+                <span>Note: </span><b>Under development</b>
                 <div class="portfolio-wrapper">
                     <figure class="portfolio-item hover-box">
                         <img src="assets/images/img_1.png" alt="project" class="portfolio-item-img">
