--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
             </div>
             <nav class="social-links">
                 <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/ArchanaSai" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
@@ -141,7 +141,7 @@
                     <div class="client-logo"><img src="assets/images/Clients_4.svg" alt="logo" class="w-100"></div>
                 </div>
             </section>
-            -->
+            
             <section class="services-section">
                 <h6 class="section-subtitle">WHAT I DO</h6>
                 <h2 class="section-title">SERVICES</h2>
@@ -191,7 +191,7 @@
                     </div>
                 </div>
             </section>
-        <!--
+        
             <section class="achievements-section">
                 <h6 class="section-subtitle">WHAT I DO</h6>
                 <h2 class="section-title">ACHIEVEMENTS</h2>
