updated files commit

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="blackDove.jpg">
     <title>Contact - Archana Sai</title>
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
@@ -34,7 +35,7 @@
             </div>
             <nav class="social-links">
                 <a href="https://www.linkedin.com/in/archanasai-p" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ArchanaSai" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/ArchanaSai" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">personal information</h5>
