--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content-wrapper">
         <aside>
             <div class="profile-img-wrapper">
-                <img src="assets/images/Profile.png" alt="profile">
+                <img src="./blackDove.jpg" alt="profile">
             </div>
             <h1 class="profile-name">Archana Sai</h1>
             <div class="text-center">
