added smart brain app url

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                     </figure>
                     
                     <figure class="portfolio-item hover-box">
-                        <a href="#" style="color:black;" target="_blank">
+                        <a href="https://archanasai.github.io/smart-brains-web/" style="color:black;" target="_blank">
                             <h3>Smart Brain</h3>
                             <figcaption class="portfolio-item-details overlay">
                                 <h5 class="portfolio-item-title">Project 04</h5>
