updated projects info

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,9 @@
                             <figcaption class="portfolio-item-details overlay">
                                 <h5 class="portfolio-item-title">Project 01</h5>
                                 <p class="portfolio-item-description">Dancing Robo</p>
+                                <br/>
+                                <h5 class="portfolio-item-title">Used</h5>
+                                <p class="portfolio-item-description">HTML,CSS,JS,GitHub Pages</p>
                             </figcaption>
                         </a>
                     </figure>
@@ -100,6 +103,9 @@
                                 <h5 class="portfolio-item-title">Project 02</h5>
                                 <p class="portfolio-item-description">Background Generator
                                 </p>
+                                <br/>
+                                <h5 class="portfolio-item-title">Used</h5>
+                                <p class="portfolio-item-description">HTML,CSS,JS,GitHub Pages</p>
                             </figcaption>
                         </a>
                     </figure>
@@ -110,6 +116,9 @@
                             <figcaption class="portfolio-item-details overlay">
                                 <h5 class="portfolio-item-title">Project 03</h5>
                                 <p class="portfolio-item-description">Robo Friends</p>
+                                <br/>
+                                <h5 class="portfolio-item-title">Used</h5>
+                                <p class="portfolio-item-description">React JS,GitHub Pages</p>
                             </figcaption>
                         </a>
                     </figure>
@@ -120,6 +129,9 @@
                             <figcaption class="portfolio-item-details overlay">
                                 <h5 class="portfolio-item-title">Project 04</h5>
                                 <p class="portfolio-item-description">Smart Brains</p>
+                                <br/>
+                                <h5 class="portfolio-item-title">Used</h5>
+                                <p class="portfolio-item-description">React JS,GitHub Pages,Heroku,Node JS,Express JS,Postgre SQL</p>
                             </figcaption>
                         </a>
                     </figure>
