--- a/resource.html
+++ b/resource.html
@@ -46,6 +46,29 @@
                         <li><a href="https://www.namecheap.com/logo-maker/" target="_blank">Name Cheap</a></li>
                     </ul>
                     
+                    <h1>Documentation</h1>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li><a href="https://knexjs.org/" target="_blank">Knex JS</a></li>
+                        <li><a href="https://reactjs.org/docs/getting-started.html" target="_blank">React JS</a></li>
+                        <li><a href="https://expressjs.com/en/5x/api.html" target="_blank">Express JS</a></li>
+                        <li><a href="https://devcenter.heroku.com/" target="_blank">Heroku Docs</a></li>
+                    </ul>
+
+                    <h1>Reference Sites</h1>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></li>
+                        <li><a href="https://coderbyte.com/" target="_blank">Coder Byte</a></li>
+                        <li><a href="https://developer.mozilla.org/en-US/docs/Web" target="_blank">Mozilla Dev</a></li>
+                        <li><a href="https://zerotomastery.io/" target="_blank">Zero To Mastery</a></li>
+                    </ul>
+                    
+                    <h1>Blog Posts</h1>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li><a href="https://medium.com/" target="_blank">Medium</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
