--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <section class="intro-section text-center mt-5">
                 <h2 class="section-title">Helloooo!!!!</h2>
                 <div class="container">
-                    <p>Welcome to my first ever portfolio page.</p>
+                    <p>I'm Archana Sai and this is my personal website</p>
                     <p>
                         I'm a Full stack developer, worked in Development and Maintenance of web based applications. 
                         I enjoy turning complex problems into simple, beautiful and intuitive designs. My job is to
@@ -84,14 +84,14 @@
                         Moreover, My aim is to bring across your message and identity in the most creative way. 
                     </p>
                     <p>
-                        You can go to Resume tab, where I have shared my education and work experience or You can go to Projects tab, where I have shared the projects I have developed and their source code.
-                        You can click on Hire Me which will lead you to the contact page, where I have listed the sources to contact me.
+                        Here, you can read and know about me, including how to <a href="./contact.html">contact me</a>, or a tiny bit more about this site 
+                        and what I have built so far.
                     </p>
                     <p>
-                        Hope you like my website and the projects I have developed. Until next time..
+                        Hope you like my website and <a href="./portfolio.html">the projects</a> I have developed. Until next time..
                     </p>
                 </div>
-                <a href="./contact.html" class="btn btn-primary btn-hire-me">HIRE ME</a>
+                
             </section>
             <!--
                 <section class="resume-section">
